--- a/11Animation5.css
+++ b/11Animation5.css
@@ -18,7 +18,8 @@ body{
     display:flex;
     flex-direction:row;
     justify-content:center;
-    margin-top:250px;
+    margin-top:0px;
+    margin-right:-170px;
     align-items:center;
     padding:2px;
    
