--- a/12Watch.css
+++ b/12Watch.css
@@ -1,8 +1,9 @@
 
 body{
-    margin-right:90px;
-    margin-top:30px;
-    margin-left:70px;
+    margin:0;
+    padding:0;
+    height:100vh;
+    width:100vw;
 }
 
 
@@ -92,21 +93,10 @@ button{
  }
 
  .image{
-    display:flex;
-    flex-direction:row;
-    justify-content:space-around;
-     margin-right:880px;
-    margin-top:50px;
+    
  }
- #pic1,#pic2,#pic3{
-    height:50px;
-    width:50px;
-    border:6px solid rgb(172, 170, 170);
-    border-radius:50%;
-  }
-  #pic2,#pic1{
-    margin-right:-30px;
-  }
+ 
+  
   #box1{
      height:50px;
     width:50px;
@@ -122,6 +112,19 @@ button{
 
   }
   #pic4{
-    width:1000px;
-    height:auto;
+   width:900px;
+   height:400px;
+   margin-right:-100px;
   }
+#ptwo{
+   font-size:1.3em;
+   color:rgb(250, 248, 248);
+   font-weight:bold;
+   margin-top:-40px;
+   margin-left:40px;
+}
+#line{
+   .width:300px;
+   height:2px;
+   color:blue;
+}
