--- a/15Dance.css
+++ b/15Dance.css
@@ -22,35 +22,10 @@ body{
 i{
     color: white;
 }
-/*#round{
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
 
-}
-#round1{
-    color: white;
-}
-#round2{
-    color: rgb(237, 140, 4);
-}
-
-
-#roundtwo{
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    display: flex;
-    flex-direction: row;
-    color: white;
-     align-items: center;
-}*/
 
 .image{
-    width: 100vw;
+    
  
  
  display: flex;
@@ -60,16 +35,7 @@ i{
 
  
 }
-#pic{
-    width: 100vw;
 
- 
- display: flex;
- flex-direction: row;
- justify-content: space-between;
- align-items: center;
- 
- }
  #pic1,#pic2{
     height: 350px;
     width: 350px;
@@ -87,7 +53,7 @@ i{
   
     
 }
-.text{
+p{
     
  display: flex;
  flex-direction: row;
@@ -152,6 +118,7 @@ h4{
  justify-content:space-evenly;
  align-items: flex-end;
  
+ 
 }
 #square1,#square2,#square3,#square4{
     
@@ -165,7 +132,16 @@ h4{
  border-radius: 30px;
  color: rgb(197, 196, 196);
  font-size: 0.8em;
+ animation-name: rotation;
+ animation-direction: alternate;
+ animation-duration: 5s;
+ animation-timing-function: ease-in-out;
+ animation-iteration-count: infinite;
+ animation-delay: 1s;
+ translate y :(20px);
+
 }
+
 .lastpart{
 display: flex;
  flex-direction: row;
@@ -181,3 +157,19 @@ display: flex;
  #lastp{
     color: rgb(238, 151, 11);
  }
+ 
+   
+@keyframes rotation{
+    from{
+        transform: rotate(0deg);
+       transform translate y :(20px);
+       
+    }
+    to{
+        transform: rotate(35deg);
+        translate y :(80px);
+       
+    }
+}
+   
+ 
