--- a/15Dance.css
+++ b/15Dance.css
@@ -116,6 +116,36 @@ h1{
     border-radius: 50%;
     background-color: rgb(238, 151, 11);
 }
+#boll1#boll2,#boll3{
+    animation-name:loader;
+ animation-direction:reverse;
+ animation-duration: 5s;
+ animation-timing-function: ease-in-out;
+ animation-iteration-count: infinite;
+ animation-delay: 1s;
+ 
+}
+@keyframes loader{
+    from{
+        height:90px;
+        width:90px;
+    }
+     to{
+        height:100px;
+        width:100px;
+    }
+}
+#box1{
+     animation-delay:0.2s;
+}
+#box2{
+     animation-delay:0.5s;
+}
+#box3{
+     animation-delay:0.7s;
+}
+
+
 .secondheader{
     display: flex;
  flex-direction: row;
