--- a/15Dance.css
+++ b/15Dance.css
@@ -170,27 +170,7 @@ h4{
  
  
 }
-#square1,#square2,#square3,#square4{
-    
-     display: flex;
- flex-direction: row;
- justify-content:space-evenly;
- align-items: flex-end;
- height: 160px;
- width: 250px;
- border: 1px solid white ;
- border-radius: 30px;
- color: rgb(197, 196, 196);
- font-size: 0.8em;
- animation-name: rotation;
- animation-direction: alternate;
- animation-duration: 5s;
- animation-timing-function: ease-in-out;
- animation-iteration-count: infinite;
- animation-delay: 1s;
- translate y :(20px);
 
-}
 
 .lastpart{
 display: flex;
@@ -208,17 +188,43 @@ display: flex;
  #lastp{
     color: rgb(238, 151, 11);
  }
+ #square1,#square2,#square3,#square4{
+    
+     display: flex;
+ flex-direction: row;
+ justify-content:space-evenly;
+ align-items: flex-end;
+ height: 160px;
+ width: 250px;
+ border: 1px solid white ;
+ border-radius: 30px;
+ color: rgb(197, 196, 196);
+ font-size: 0.8em;
+ }
+ #square1:hover,#square2:hover,#square3:hover,#square4:hover{
+    
+     
+ animation-name: rotation;
+ animation-direction: alternate;
+ animation-duration: 5s;
+ animation-timing-function: ease-in-out;
+ animation-iteration-count: infinite;
+ animation-delay: 0.5s;
+ translate  :Y( -20px);
+
+}
+
  
    
 @keyframes rotation{
     from{
         transform: rotate(0deg);
-       transform translate y (20px);
+        translate: Y(-20px);
        
     }
     to{
         transform: rotate(45deg);
-        translate y (80px);
+        translate: Y(-80px);
        
     }
 }
