--- a/16Home.css
+++ b/16Home.css
@@ -96,8 +96,8 @@ button{
     display:flex;
     flex-direction:row;
     justify-content: space-between;
-    padding-right:140px;
-    padding-left:170px;
+    padding-left:130px;
+   
 }
 #box{
     display:flex;
@@ -130,13 +130,14 @@ button{
 }
 #room{
     height:300px;
-    width:430px;
+    width:250px;
     display:flex;
      flex-direction:column;
-    border-radius: 20px;
+    border-radius: 40px;
     justify-content:flex-start;
     background-color: rgb(251, 249, 249);
-    padding:30px;
+    padding:60px;
+    margin-left:500px;
     
     
     
