--- a/17Flower.css
+++ b/17Flower.css
@@ -36,16 +36,19 @@ body{
        
         height:150px;
         border:3px dotted rgb(30, 238, 11);
+        border-radius: 10px;
     }
   #top{
     height:60px;
     width:180px;
     background-color: rgb(223, 126, 9);
+    
   }
 
   @keyframes rotate{
     from{
      transform: rotate(0deg);
+     
     }
     to{
         transform: rotate(360deg);
